Fixed issue with spacing on mc logo

--- a/mission-ceramics/src/styles/Home.scss
+++ b/mission-ceramics/src/styles/Home.scss
@@ -340,13 +340,13 @@ span.home-step {
     font-size: 48px;
     line-height: 48px;
     width: 100px;
-    margin-right: 50vw;
+    margin-right: 55vw;
   }
   .logo {
     width: 100px;
   }
   .logo path {
-    transform: translate(0, -200px);
+    transform: translate(0, -180px);
   }
   .mobile-header .cart-icon {
     margin-top: -15px;
